--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,255 @@
-.App {
+html {
+  box-sizing: border-box;
+  font-size: 12px;
+  scroll-behavior: smooth;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+body {
+  height: 100vh;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  background: lightblue;
+  background-image: url("https://source.unsplash.com/random/?landscape");
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin-top: 0;
+}
+
+.main-container {
+  display: flex;
+  flex-direction: column;
+  padding: 1.8em;
+  border-radius: 30px;
+  width: 100%;
+  max-width: 420px;
+  background: rgba(255, 255, 255, 0.15);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  backdrop-filter: blur(8.5px);
+}
+
+.search-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.search-bar {
+  border: none;
+  outline: none;
+  padding: 0.6em 2em;
+  border-radius: 22px;
+  border: none;
+  background: rgba(255, 255, 255, 0.15);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  color: white;
+  font-size: 15px;
+  width: calc(100% - 80px);
+}
+
+.locay-container {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+#geo-btn {
+  margin: 0.6em;
+  border-radius: 22px;
+  border: none;
+  outline: none;
+  height: 3em;
+  width: 160px;
+  background: rgba(255, 255, 255, 0.15);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  color: rgb(236, 241, 247);
+  transition: 1s ease-in-out;
+  cursor: pointer;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+#geo-btn:hover {
+  background: rgba(118, 183, 243, 0.85);
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+#search-btn {
+  margin: 0.6em;
+  border-radius: 50%;
+  border: none;
+  outline: none;
+  height: 2.8em;
+  width: 2.8em;
+  background: rgba(255, 255, 255, 0.15);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  color: white;
+  transition: 1s ease-in-out;
+  cursor: pointer;
+}
+
+#search-btn:hover {
+  background: rgba(250, 250, 250, 0.85);
+}
+
+.weather-info {
+  margin-top: 2em;
+  color: white;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.icon-desc-container {
+  display: flex;
+  justify-content: space-between;
+  width: 42%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.description > p {
+  height: 100%;
+  padding-top: 40px;
+}
+
+.city,
+.temp,
+.description,
+.feels-like,
+.wind-speed {
+  margin: 0;
+}
+
+.temp {
+  font-size: 4em;
+}
+
+@media only screen and (min-width: 768px) {
+  .main-container {
+    padding: 2em;
+    margin: 1em;
+    width: 600px;
+    max-width: 700px;
   }
-  to {
-    transform: rotate(360deg);
+
+  #search-btn {
+    margin: 1em;
+    height: 3em;
+    width: 3em;
+  }
+
+  .search-bar {
+    font-size: 18px;
+    width: 90%;
+  }
+
+  .city,
+  .description {
+    font-size: 2em;
+  }
+
+  .feels-like,
+  .wind-speed {
+    font-size: 1.2em;
+  }
+}
+
+.lds-default {
+  display: inline-block;
+  position: relative;
+  width: 80px;
+  height: 80px;
+}
+.lds-default div {
+  position: absolute;
+  width: 6px;
+  height: 6px;
+  background: #fff;
+  border-radius: 50%;
+  animation: lds-default 1.2s linear infinite;
+}
+.lds-default div:nth-child(1) {
+  animation-delay: 0s;
+  top: 37px;
+  left: 66px;
+}
+.lds-default div:nth-child(2) {
+  animation-delay: -0.1s;
+  top: 22px;
+  left: 62px;
+}
+.lds-default div:nth-child(3) {
+  animation-delay: -0.2s;
+  top: 11px;
+  left: 52px;
+}
+.lds-default div:nth-child(4) {
+  animation-delay: -0.3s;
+  top: 7px;
+  left: 37px;
+}
+.lds-default div:nth-child(5) {
+  animation-delay: -0.4s;
+  top: 11px;
+  left: 22px;
+}
+.lds-default div:nth-child(6) {
+  animation-delay: -0.5s;
+  top: 22px;
+  left: 11px;
+}
+.lds-default div:nth-child(7) {
+  animation-delay: -0.6s;
+  top: 37px;
+  left: 7px;
+}
+.lds-default div:nth-child(8) {
+  animation-delay: -0.7s;
+  top: 52px;
+  left: 11px;
+}
+.lds-default div:nth-child(9) {
+  animation-delay: -0.8s;
+  top: 62px;
+  left: 22px;
+}
+.lds-default div:nth-child(10) {
+  animation-delay: -0.9s;
+  top: 66px;
+  left: 37px;
+}
+.lds-default div:nth-child(11) {
+  animation-delay: -1s;
+  top: 62px;
+  left: 52px;
+}
+.lds-default div:nth-child(12) {
+  animation-delay: -1.1s;
+  top: 52px;
+  left: 62px;
+}
+@keyframes lds-default {
+  0%,
+  20%,
+  80%,
+  100% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.5);
   }
 }
